# result

./: README.md  pyproject.toml  taskfile.yml
src/result/: __init__.py  result.py
tests/: test_result.py  test_typing.py  utils.py
