[project]
name = "result"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nir", email = "nrbnlulu@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typing-extensions>=4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/result"]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true
src = ["src", "tests"]

[tool.ruff.lint]
ignore = [
    "TC001",
    "A005",
    "TID252",
    "E501",
    "S101",
    "S102",
    "S104",
    "S324",
    "EXE002",
    "D100",
    "D102",
    "D203",
    "D206",
    "D103",
    "D104",
    "D105",
    "D106",
    "D101",
    "D107",
    "D212",
    "D211",
    "PGH003",
    "PGH004",
    "N811",
    "N804",
    "N818",
    "N806",
    "N815",
    "ARG001",
    "ARG002",
    "DTZ003",
    "DTZ005",
    "RSE102",
    "SLF001",
    "PLR",
    "INP",
    "TRY",
    "SIM300",
    "SIM114",
    "DJ008",
    "FIX002",
    "S603",
    "S607",
    "TD002",
    "TD003",
    "W191",
    "COM812",
    "ISC001",
]
select = ["ALL"]
exclude = ["alembic/versions/*"]
